styles/lcars.css
@font-face {
  font-family: 'swiss911';
  src:  url('../assets/fonts/tt0106m0.ttf') format('truetype');
}

@font-face {
  font-family: 'helveticaUC';
  src:  url('../assets/fonts/Helvetica_Ultra_Compressed.ttf') format('truetype');
}

* {
  margin: 0;
  padding: 0;
}

body {
  background-color: black;
  font-family: 'helveticaUC';
  /*font-family: 'swiss911';*/
  font-size: 30px;
  color: white;
}

.main-screen {
  width: -webkit-calc(100% - 20px);
  width: -moz-calc(100% - 20px);
  width: -calc(100% - 20px);
  height: -webkit-calc(100% - 20px);
  height: -moz-calc(100% - 20px);
  height: -calc(100% - 20px);
  margin: 10px;
  position: fixed;
  overflow: hidden;
}

.NW-outer {
  position: absolute;;
  border-radius: 50px 0px 0px 0px;
  width: 100%;
  height: 100%;
}

.NW-nub {
  position: absolute;
  height: 20px;
  width: 20px;
  border-radius: 0px 10px 10px 0px;
  right: 0;
}

.NW-nub.bg {
  position: absolute;
  background-color: black;
  height: 20px;
  width: 20px;
  border-radius: 0;
  right: 0;
}

.NW-inner{
  position: absolute;
  background-color: black;
  /*border-style: solid;*/
  /*border-color: green;*/
  border-radius: 25px 0 0 0;

  width: -webkit-calc(100% - 150px);
  width: -moz-calc(100% - 150px);
  width: -calc(100% - 150px);
  height: -webkit-calc(100% - 20px);
  height: -moz-calc(100% - 20px);
  height: -calc(100% - 20px);

  margin-left: 150px;
  top: 20px;
}

.SW-outer {
  position: absolute;
  border-radius: 0px 0px 0px 50px;
  width: 100%;
  height: 100%;
}

.SW-nub {
  position: absolute;
  height: 20px;
  width: 20px;
  border-radius: 0px 10px 10px 0px;
  right: 0;
  bottom: 0px;
}

.SW-nub.bg {
  position: absolute;
  background-color: black;
  height: 20px;
  width: 20px;
  border-radius: 0;
  right: 0;
  bottom: 0px;
}

.SW-inner {
  position: absolute;
  background-color: black;
  /*border-style: solid;*/
  /*border-color: green;*/
  border-radius: 0px 0px 0px 25px;

  width: -webkit-calc(100% - 150px);
  width: -moz-calc(100% - 150px);
  width: -calc(100% - 150px);
  height: -webkit-calc(100% - 20px);
  height: -moz-calc(100% - 20px);
  height: -calc(100% - 20px);

  margin-left: 150px;
  bottom: 20px;
}

.NWS-outer {
  position: absolute;
  border-radius: 50px 0px 0px 50px;
  width: 100%;
  height: 100%;
  color: orange;
}

.NWS-inner {
  position: absolute;
  background-color: black;
  /*border-style: solid;*/
  /*border-color: green;*/
  border-radius: 25px 0px 0px 25px;

  width: -webkit-calc(100% - 150px);
  width: -moz-calc(100% - 150px);
  width: -calc(100% - 150px);
  height: -webkit-calc(100% - 40px);
  height: -moz-calc(100% - 40px);
  height: -calc(100% - 40px);

  margin-left: 150px;
  bottom: 20px;
  top: 20px;
}

.NES-outer {
  position: absolute;
  border-radius: 0px 50px 50px 0px;
  width: 100%;
  height: 100%;
  color: orange;
}

.NES-inner {
  position: absolute;
  background-color: black;
  /*border-style: solid;*/
  /*border-color: green;*/
  border-radius: 0px 25px 25px 0px;

  width: -webkit-calc(100% - 150px);
  width: -moz-calc(100% - 150px);
  width: -calc(100% - 150px);
  height: -webkit-calc(100% - 40px);
  height: -moz-calc(100% - 40px);
  height: -calc(100% - 40px);

  margin-right: 150px;
  bottom: 20px;
  top: 20px;
}

.SE-nub {
  position: absolute;
  height: 20px;
  width: 20px;
  border-radius: 10px 0px 0px 10px;
  left: 0;
  bottom: 0px;
}

.SE-nub.bg {
  position: absolute;
  background-color: black;
  height: 20px;
  width: 20px;
  border-radius: 0;
  left: 0;
  bottom: 0px;
}

.NE-nub {
  position: absolute;
  height: 20px;
  width: 20px;
  border-radius: 10px 0px 0px 10px;
  left: 0;
  /*top: 0px;*/
}

.NE-nub.bg {
  position: absolute;
  background-color: black;
  height: 20px;
  width: 20px;
  border-radius: 0;
  left: 0;
  /*top: 0px;*/
}

.left-button-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 100%;
}

.v-button {
  position: relative;
  border-color: black;
  border-style: solid;
  border-width: 4px 0px 0px 0px;
  /*margin-left: 0px;*/
  height: 80px;
  width: 150px;
  top: 80px;
}

.v-button.small {
  height: 50px !important;
}

.v-button.medium {
  height: 80px !important;
}

.v-button.large {
  height: 120px !important;
}

.v-button.huge {
  height: 240px !important;
}

.top-button-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 20px;
}

.h-button {
  position: relative;
  float: left;
  border-color: black;
  border-style: solid;
  border-width: 0px 0px 0px 6px;
  left: 300px;
  margin-top: 0;
  height: 20px;
  width: 200px;
}

.h-button.small {
  width: 100px;
}

.h-button.large {
  width: 300px;
}

.h-button.huge {
  width: 400px;
}

.h-button.spacer {
  border-style: none;
}

.bottom-button-container {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 20px;
}

.content {
  position: relative;
  color: white;
}

.h-button.color-black .content {
  position: absolute;
  width: 100%;
  font-size: 22px;
  text-transform: uppercase;
  text-align: center;
  /*z-index: 1000;*/
}

.v-button .content {
  position: absolute;
  text-transform: uppercase;
  bottom: 0;
  right: 5px;
  color: black;
}

.v-button .content a {
  text-decoration: none;
  color: black;
}

.v-button .content a:hover {
  color: white;
}

.SW-inner-screen {
  position: absolute;
  height: -webkit-calc(100% - 25px);
  height: -moz-calc(100% - 25px);
  height: -calc(100% - 25px);
  width: -webkit-calc(100% - 25px);
  width: -moz-calc(100% - 25px);
  width: -calc(100% - 25px);
  left: 25px;
  bottom: 25px;
  overflow: hidden;
}

.NW-inner-screen {
  position: absolute;
  height: -webkit-calc(100% - 25px);
  height: -moz-calc(100% - 25px);
  height: -calc(100% - 25px);
  width: -webkit-calc(100% - 25px);
  width: -moz-calc(100% - 25px);
  width: -calc(100% - 25px);
  left: 25px;
  top: 25px;
  overflow: hidden;
}

.NWS-inner-screen {
  position: absolute;
  height: -webkit-calc(100% - 50px);
  height: -moz-calc(100% - 50px);
  height: -calc(100% - 50px);
  width: -webkit-calc(100% - 25px);
  width: -moz-calc(100% - 25px);
  width: -calc(100% - 25px);
  left: 25px;
  top: 25px;
  bottom: 25px;
  overflow: hidden;
}

.NW-inner-screen.overflow-scroll {
  overflow-y:auto;
}

.SW-inner-screen.overflow-scroll {
  overflow-y:auto;
}

.NWS-inner-screen.overflow-scroll {
  overflow-y:auto;
}

.album-cover-art {
  position: relative;
  left: 0%;
  margin-top: 2rem;
  z-index: 1;
}

.album-cover-art img{
  position: relative;
  display: block;
  margin: auto;
  width: 60%;
  z-index: 2;
}

.boring-description {
  text-align: justify;
  margin: 1rem;
}

.boring-description p{
  font-family: "Helvetica";
  font-size: 20px;
}

.v-partition {
  position: relative;
  float: left;
  /*margin: 2px;*/
  overflow: hidden;
  height: 100%;
}
.v-partition.ten {width: 10%;}
.v-partition.twenty {width: 20%;}
.v-partition.thirty {width: 30%;}
.v-partition.forty {width: 40%;}
.v-partition.fifty {width: 50%;}
.v-partition.sixty {width: 60%;}
.v-partition.seventy {width: 70%;}
.v-partition.eighty {width: 80%;}
.v-partition.ninety {width: 90%;}

.v-partition.rigid-small {width: 200px;}
.v-partition.rigid-medium {width: 400px;}
.v-partition.rigid-large {width: 600px;}
.v-partition.rigid-huge {width: 800px;}

.h-partition {
  position: relative;
  margin-bottom: 4px;
  overflow: hidden;
}
.h-partition.ten    {height: 10%;}
.h-partition.twenty {height: 20%;}
.h-partition.thirty {height: 30%;}
.h-partition.forty  {height: 40%;}
.h-partition.fifty  {height: 50%;}
.h-partition.sixty  {height: 60%;}
.h-partition.seventy{height: 70%;}
.h-partition.eighty {height: 80%;}
.h-partition.ninety {height: 90%;}
.h-partition.rigid-small {height: 200px;}
.h-partition.rigid-medium {height: 400px;}
.h-partition.rigid-large {height: 600px;}
.h-partition.rigid-huge {height: 800px;}

/*
  colors ===============================
*/
.color-A {background-color: #FF9900;}
.color-B {background-color: #CC99CC;}
.color-C {background-color: #9999CC;}
.color-D {background-color: #CC6666;}
.color-E {background-color: #FFCC99;}
.color-F {background-color: #9999FF;}
.color-G {background-color: #FF9966;}
.color-H {background-color: #CC6699;}
.color-black {background-color: #000;}

/* Better Colour Names*/
.Orange {background-color: #FF9900;}
.Lavender {background-color: #CC99CC;}
.Blue {background-color: #9999CC;}
.Red {background-color: #CC6666;}
.Tan {background-color: #FFCC99;}
.Lightblue {background-color: #9999FF;}
.Salmon {background-color: #FF9966;}
.Purple {background-color: #CC6699;}
.Black {background-color: #000;}

